# nordic_wifi_latency_measurement

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Kconfig  README.md  overlay-raw-rx-monitor.conf  overlay-raw-tx-sta-non-conn.conf  overlay-rx-softap.conf  overlay-rx.conf  overlay-tx.conf  overlay-udp-rx-softap.conf  overlay-udp-rx-sta.conf  overlay-udp-tx-sta.conf  prj.conf  sample.yaml  sysbuild.conf  west.yml  wifi_raw_and_udp_packets_latency_comparison.md
.github/workflows/: build.yml
boards/: nrf7002dk_nrf5340_cpuapp.conf
script/: ppk_record_analysis.py
src/: led_utils.c  led_utils.h  main.c  net_event_mgmt.c  net_event_mgmt.h  net_event_mgmt_utils.c  net_event_mgmt_utils.h  raw_utils.c  raw_utils.h  udp_utils.c  udp_utils.h  wifi_utils.c  wifi_utils.h
